# MatchingCompressor

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakeSettings.json  Compiling & copyright notes.txt  MatchingCompressor.jucer  Readme.md  setup.iss
.github/workflows/: build.yml
Docs/: Copyright notes.txt  Setup.txt  build.md
Source/: Colours.h  ComponentInitializerHelper.h  ExceptionHelper.h  MCLookAndFeel.cpp  MCLookAndFeel.h  MatchWindow.cpp  MatchWindow.h  ParameterInfo.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Ranges.h
Source/Components/: BaseDataReceiver.h  BaseMainView.h  BaseMatchView.h  ComboBoxWithAttachment.cpp  ComboBoxWithAttachment.h  ComponentInitializerHelper.cpp  ComponentInitializerHelper.h  CurvePlotComponent.cpp  CurvePlotComponent.h  DataReceiver.cpp  DataReceiver.h  PlotWithCoordinateSystemComponent.cpp  PlotWithCoordinateSystemComponent.h  SettingsComponent.cpp  SettingsComponent.h  SettingsWithDataReceiver.cpp  SettingsWithDataReceiver.h  SliderWithAttachment.cpp  SliderWithAttachment.h  ToggleButtonWithAttachment.cpp  ToggleButtonWithAttachment.h
Source/Controllers/: DataReceiverController.cpp  DataReceiverController.h  MainController.cpp  MainController.h  MatchController.cpp  MatchController.h
Source/DSP/: DataCollector.cpp  DataCollector.h  DynamicShaper.cpp  DynamicShaper.h
Source/Data/: Colours.h  CurveBounds.h  CurveData.h  MatchingData.cpp  MatchingData.h  Messages.h  Ranges.h
Source/LookAndFeel/: MCAltLookAndFeel.cpp  MCAltLookAndFeel.h  MCDefaultLookAndFeel.cpp  MCDefaultLookAndFeel.h  MCLookAndFeel.cpp  MCLookAndFeel.h
Source/ParamsCalculator/: CompParamsCalculator.cpp  CompParamsCalculator.h  CompParamsCalculatorEnv.cpp  CompParamsCalculatorEnv.h  CompParamsCalculatorEnv1D.cpp  CompParamsCalculatorEnv1D.h  CompParamsCalculatorEnv2D.cpp  CompParamsCalculatorEnv2D.h  CompParamsCalculatorFactory.cpp  CompParamsCalculatorFactory.h  CompParamsCalculatorNoEnv.cpp  CompParamsCalculatorNoEnv.h  FuncAndGrad.h  HashEqualStructures.h  QuantilesCalculator.cpp  QuantilesCalculator.h
Source/Utilities/: AudioFileReader.cpp  AudioFileReader.h  CurveCalculator.cpp  CurveCalculator.h  ExceptionHelper.h  SetDataState.h
